--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,18 @@
+*{
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
 
-/* Your CSS Code here. */
+.main{
+  width: 200px;
+  padding: 10px;
+  border-left: 5px solid green;
+  background-color: purple;
+  & h1{
+    font-size: 20px;
+    color: white;
+    text-decoration: underline;
+    
+  }
+}
